--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ gradle.properties
 /koodi/viikko2/RiippuvuuksienInjektointi3/.nb-gradle/
 /koodi/viikko2/Verkkokauppa1/.nb-gradle/
 /koodi/viikko1/NhlStatistics1/.nb-gradle/
+/Verkkokauppa1/.nb-gradle/
